<resources>
    <string name="app_name">InPeace</string>
    <string name="task1">Task1</string>
    <string name="heading">Welcome to Tic-Tac-Toe</string>
    <string name="grid">Our main grid</string>
    <string name="status">X\'s Turn: Tap to play</string>
    <string name="x_score">X Score:</string>
    <string name="o_score">O Score:</string>
    <string name="draw_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="draw_res">Open</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="time">HH:MM:SS</string>
    <string name="card1">Audio
                            Books</string>
    <string name="card2">Games</string>
    <string name="card3">Videos</string>
    <string name="card4">Music</string>
    <string name="card5">Tasks</string>
    <string name="card6">Motivaion</string>
    <string name="card7">Consult</string>
    <string name="card8">Global Chat</string>
    <string name="title_activity_motivation_home">motivation_home</string>
    <string name="tab_text_1">Videos</string>
    <string name="tab_text_2">Quotes</string>
    <string name="title_activity_motivation_2">motivation_2</string>
    <string name="prateek">Jaipur Engineering College and Research Centre | Computer Science Engineering | 2024 |
I have a keen interest in Agri-Tech and I am the Leader of this team. I have done all of the
Integration and Development part of the Application Development.</string>

    <string name="prateek_name">Prateek Singh</string>

    <string name="nishant">Jaipur Engineering College and Research Centre | Computer Science Engineering | 2024 |
I am a creative enthusiast and have created unique designs for this application and
managed all the Data required for the Application.</string>

    <string name="nishant_name">Nishant Munshi</string>

    <string name="kshitij">Jaipur Engineering College and Research Centre | Computer Science Engineering | 2024 |
Have an eye for design and colour composition and have been a part of the design team. I
also have played a major role in the management of Database.</string>

    <string name="kshitij_name">Kshitiz Shrivastava</string>


    <string name="bilal">Jaipur Engineering College and Research Centre | Computer Science Engineering | 2024 |
I have dealt with Game Development and helped transform the ideas of the design team
into a reality using code.</string>

    <string name="bilal_name">Mohammed Bilal Sheikh</string>


    <string name="kushagra">Application Tester</string>

    <string name="kushagra_name">Kushagra Kashyap</string>


</resources>