<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:clickable="true"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context=".aboutus">

    <LinearLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
        android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        android:elevation="80dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:layout_scrollFlags="noScroll"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_logo_written"
            android:scaleType="centerInside"
            android:layout_gravity="center"/>

    </androidx.appcompat.widget.Toolbar>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:elevation="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        app:cardCornerRadius="25sp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center|top"
            android:src="@drawable/prateek" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_gravity ="center"
                android:textColor="@color/black"
                android:layout_marginTop="28dp"
                android:layout_marginRight="50dp"
                android:fontFamily="@font/montserrat_bold"
                android:gravity="center"
                android:text="@string/prateek_name"
                android:textSize="15dp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_gravity ="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:layout_marginRight="50dp"
                android:fontFamily="@font/montserrat"
                android:gravity="center"
                android:text="@string/prateek"
                android:textSize="15dp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:elevation="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        app:cardCornerRadius="25sp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_gravity="center|top"
                android:src="@drawable/bilal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_gravity ="center"
                android:textColor="@color/black"
                android:layout_marginTop="28dp"
                android:layout_marginRight="50dp"
                android:fontFamily="@font/montserrat_bold"
                android:gravity="center"
                android:text="@string/bilal_name"
                android:textSize="15dp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_gravity ="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:layout_marginRight="50dp"
                android:fontFamily="@font/montserrat"
                android:gravity="center"
                android:text="@string/bilal"
                android:textSize="15dp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:elevation="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        app:cardCornerRadius="25sp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_gravity="center|top"
                android:src="@drawable/nishant" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_gravity ="center"
                android:textColor="@color/black"
                android:layout_marginTop="28dp"
                android:layout_marginRight="50dp"
                android:fontFamily="@font/montserrat_bold"
                android:gravity="center"
                android:text="@string/nishant_name"
                android:textSize="15dp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_gravity ="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:layout_marginRight="50dp"
                android:fontFamily="@font/montserrat"
                android:gravity="center"
                android:text="@string/nishant"
                android:textSize="15dp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:elevation="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        app:cardCornerRadius="25sp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_gravity="center|top"
                android:src="@drawable/kshitij" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_gravity ="center"
                android:textColor="@color/black"
                android:layout_marginTop="28dp"
                android:layout_marginRight="50dp"
                android:fontFamily="@font/montserrat_bold"
                android:gravity="center"
                android:text="@string/kshitij_name"
                android:textSize="15dp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_gravity ="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:layout_marginRight="50dp"
                android:fontFamily="@font/montserrat"
                android:gravity="center"
                android:text="@string/kshitij"
                android:textSize="15dp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:elevation="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        app:cardCornerRadius="25sp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_gravity="center|top"
                android:src="@drawable/kushagra" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_gravity ="center"
                android:textColor="@color/black"
                android:layout_marginTop="28dp"
                android:layout_marginRight="50dp"
                android:fontFamily="@font/montserrat_bold"
                android:gravity="center"
                android:text="@string/kushagra_name"
                android:textSize="15dp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_gravity ="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:layout_marginRight="50dp"
                android:fontFamily="@font/montserrat"
                android:gravity="center"
                android:text="@string/kushagra"
                android:textSize="15dp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    </LinearLayout>


</ScrollView>